cleaned pre_covid restaurant file

--- a/inspections data.ipynb
+++ b/inspections data.ipynb
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -483,53 +483,53 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>EAT-A-BAGEL (JOHN A NOBLE FERRY BOAT)</td>\n",
-       "      <td>Manhattan</td>\n",
-       "      <td>0</td>\n",
-       "      <td>WHITEHALL FERRY TERMINAL</td>\n",
-       "      <td>10004.0</td>\n",
-       "      <td>06/07/2013</td>\n",
+       "      <th>199982</th>\n",
+       "      <td>ELK CAFE</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>154</td>\n",
+       "      <td>PROSPECT PARK SOUTHWEST</td>\n",
+       "      <td>11218.0</td>\n",
+       "      <td>03/16/2020</td>\n",
        "      <td>08/07/2020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>BROOKLYN SWEET SPOT</td>\n",
+       "      <th>199983</th>\n",
+       "      <td>ITAL FUSION</td>\n",
        "      <td>Brooklyn</td>\n",
-       "      <td>366</td>\n",
-       "      <td>MYRTLE AVENUE</td>\n",
-       "      <td>11205.0</td>\n",
-       "      <td>04/21/2014</td>\n",
+       "      <td>2085</td>\n",
+       "      <td>NOSTRAND AVENUE</td>\n",
+       "      <td>11210.0</td>\n",
+       "      <td>03/16/2020</td>\n",
        "      <td>08/07/2020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>BROOKLYN SWEET SPOT</td>\n",
-       "      <td>Brooklyn</td>\n",
-       "      <td>366</td>\n",
-       "      <td>MYRTLE AVENUE</td>\n",
-       "      <td>11205.0</td>\n",
-       "      <td>04/21/2014</td>\n",
+       "      <th>199984</th>\n",
+       "      <td>I-FORTUNE COOKIE</td>\n",
+       "      <td>Queens</td>\n",
+       "      <td>4469</td>\n",
+       "      <td>21ST ST</td>\n",
+       "      <td>11101.0</td>\n",
+       "      <td>03/16/2020</td>\n",
        "      <td>08/07/2020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>BROOKLYN SWEET SPOT</td>\n",
-       "      <td>Brooklyn</td>\n",
-       "      <td>366</td>\n",
-       "      <td>MYRTLE AVENUE</td>\n",
-       "      <td>11205.0</td>\n",
-       "      <td>10/30/2014</td>\n",
+       "      <th>199985</th>\n",
+       "      <td>LA FLOR DEL PARAISO FRANCY RESTAURANT #4</td>\n",
+       "      <td>Queens</td>\n",
+       "      <td>80-29</td>\n",
+       "      <td>JAMAICA AVENUE</td>\n",
+       "      <td>11421.0</td>\n",
+       "      <td>03/16/2020</td>\n",
        "      <td>08/07/2020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>BROOKLYN SWEET SPOT</td>\n",
-       "      <td>Brooklyn</td>\n",
-       "      <td>366</td>\n",
-       "      <td>MYRTLE AVENUE</td>\n",
-       "      <td>11205.0</td>\n",
-       "      <td>10/30/2014</td>\n",
+       "      <th>199986</th>\n",
+       "      <td>MR. Q'S</td>\n",
+       "      <td>Bronx</td>\n",
+       "      <td>2115</td>\n",
+       "      <td>WILLIAMSBRIDGE ROAD</td>\n",
+       "      <td>10461.0</td>\n",
+       "      <td>03/16/2020</td>\n",
        "      <td>08/07/2020</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -537,29 +537,29 @@
        "</div>"
       ],
       "text/plain": [
-       "                                     DBA       BORO BUILDING  \\\n",
-       "0  EAT-A-BAGEL (JOHN A NOBLE FERRY BOAT)  Manhattan        0   \n",
-       "1                    BROOKLYN SWEET SPOT   Brooklyn      366   \n",
-       "2                    BROOKLYN SWEET SPOT   Brooklyn      366   \n",
-       "3                    BROOKLYN SWEET SPOT   Brooklyn      366   \n",
-       "4                    BROOKLYN SWEET SPOT   Brooklyn      366   \n",
+       "                                             DBA      BORO BUILDING  \\\n",
+       "199982                                  ELK CAFE  Brooklyn      154   \n",
+       "199983                               ITAL FUSION  Brooklyn     2085   \n",
+       "199984                          I-FORTUNE COOKIE    Queens     4469   \n",
+       "199985  LA FLOR DEL PARAISO FRANCY RESTAURANT #4    Queens    80-29   \n",
+       "199986                                   MR. Q'S     Bronx     2115   \n",
        "\n",
-       "                     STREET  ZIPCODE  GRADE DATE RECORD DATE  \n",
-       "0  WHITEHALL FERRY TERMINAL  10004.0  06/07/2013  08/07/2020  \n",
-       "1             MYRTLE AVENUE  11205.0  04/21/2014  08/07/2020  \n",
-       "2             MYRTLE AVENUE  11205.0  04/21/2014  08/07/2020  \n",
-       "3             MYRTLE AVENUE  11205.0  10/30/2014  08/07/2020  \n",
-       "4             MYRTLE AVENUE  11205.0  10/30/2014  08/07/2020  "
+       "                         STREET  ZIPCODE  GRADE DATE RECORD DATE  \n",
+       "199982  PROSPECT PARK SOUTHWEST  11218.0  03/16/2020  08/07/2020  \n",
+       "199983          NOSTRAND AVENUE  11210.0  03/16/2020  08/07/2020  \n",
+       "199984                  21ST ST  11101.0  03/16/2020  08/07/2020  \n",
+       "199985           JAMAICA AVENUE  11421.0  03/16/2020  08/07/2020  \n",
+       "199986      WILLIAMSBRIDGE ROAD  10461.0  03/16/2020  08/07/2020  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "rest_grades_db= rest_grades_db.dropna().copy()\n",
-    "rest_grades_db.head()"
+    "rest_grades_db.tail()"
    ]
   },
   {
